--- a/proyectos_curso/festival_musica/index.html
+++ b/proyectos_curso/festival_musica/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="build/css/app.css">
 </head>
 <body>
-    <header class=".header">
-        <div class=".contenedor contenido-header">
+    <header class="header">
+        <div class="contenedor contenido-header">
             <h1>Rock & EDM Festival</h1>
             <nav class="navegacion-principal">
                 <a href="#">Line Up</a>
