Creando la sección Sobre Festival

--- a/proyectos_curso/festival_musica/index.html
+++ b/proyectos_curso/festival_musica/index.html
@@ -12,30 +12,43 @@
     <link rel="stylesheet" href="build/css/app.css">
 </head>
 <body>
-    <header class="header">
-        <div class="contenedor contenido-header">
-            <h1>Rock & EDM Festival</h1>
-            <nav class="navegacion-principal">
-                <a href="#">Line Up</a>
-                <a href="#">Galería</a>
-                <a href="#">Boletos</a>
-            </nav>
-        </div>
-    </header>
-
-    <div class="video">
-        <div class="overlay">
-            <div class="contenedor contenido-video">
-                <h2>Rock & EDM Festival</h2>
-                <p>Mayo 2022, Campeche, México.</p>
-            </div>
-        </div>
-        <video autoplay muted loop>
-            <source src="video/concierto.mp4" type="video/mp4">
-            <source src="video/concierto.ogg" type="video/ogg">
-            <source src="video/concierto.webm" type="video/webm">
-        </video>
+<header class="header">
+    <div class="contenedor contenido-header">
+        <h1>Rock & EDM Festival</h1>
+        <nav class="navegacion-principal">
+            <a href="#">Line Up</a>
+            <a href="#">Galería</a>
+            <a href="#">Boletos</a>
+        </nav>
     </div>
+</header>
+
+<div class="video">
+    <div class="overlay">
+        <div class="contenedor contenido-video">
+            <h2>Rock & EDM Festival</h2>
+            <p>Mayo 2022, Campeche, México.</p>
+        </div>
+    </div>
+    <video autoplay muted loop>
+        <source src="video/concierto.mp4" type="video/mp4">
+        <source src="video/concierto.ogg" type="video/ogg">
+        <source src="video/concierto.webm" type="video/webm">
+    </video>
+</div>
+
+<section class="contenedor sobre-festival">
+    <div class="imagen">
+        <img src="img/imagen_vocalista.jpg" alt="Imagen Vocalista Festival">
+    </div>
+    <div class="contenido-festival">
+        <h2>Rock & EDM Festival</h2>
+        <p class="fecha">Mayo 2022, Campeche, México</p>
+        <p>Morbi cursus quam at cursus dapibus. Quisque lobortis faucibus nisi, nec hendrerit quam condimentum nec. Ut
+            facilisis augue id consequat gravida. Curabitur sit amet consequat nunc, nec aliquet risus. Duis posuere
+            interdum dignissim.</p>
+    </div>
+</section>
 
 </body>
 </html>
