--- a/proyectos_curso/festival_musica/index.html
+++ b/proyectos_curso/festival_musica/index.html
@@ -164,5 +164,12 @@
     </div> <!-- .escenario-contenedor -->
 </section> <!-- .lineup -->
 
+<section class="galeria contenedor">
+    <h3>Galería</h3>
+
+    <ul class="galeria-imagenes"></ul>
+</section>
+
+<script src="build/js/app.js"></script>
 </body>
 </html>
