--- a/proyectos_curso/festival_musica/index.html
+++ b/proyectos_curso/festival_musica/index.html
@@ -209,6 +209,10 @@
     </div>
 </section>
 
+<footer class="site-footer">
+    <p>Rock & EDM Festival. Todos los Derechos Reservados</p>
+</footer>
+
 <script src="build/js/app.js"></script>
 </body>
 </html>
